# MLcps

./: Example-Notebook.ipynb  README.md  environment.yml  getTCGAData.R  install.R  requirements.txt
CPS/: README.md  setup.cfg
CPS/src/MLcps/: GridSearchCV-object.pickle  __init__.py  getCPS.py  metrices.csv
CPS/src/MLcps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
manuscriptFigures/: README.md  plots.ipynb  spyder.ipynb
