[metadata]
name = MLcps
version = 0.0.5
author = Akshay
author_email = akshaysuhag1996@gmail.com
description =Calculate a Machine Learning (ML) performance metric called MLcps: ML Cumulative Performance Score.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FunctionalUrology/MLcps
project_urls =
    Bug Tracker = https://github.com/FunctionalUrology/MLcps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
* = *.csv, *.pickle

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
      rpy2
      pandas
      scikit-learn
      imbalanced-learn
      plotly


[options.packages.find]
where = src
